2010-05-12  kitone  <kitone@gna.org>

	* gl.po:
	Update of Galician translation by marcoslans.

2010-05-03  kitone  <kitone@gna.org>

	* cs.po:
	Update of Czech translation by Pavel Dvořák.

2010-05-02  kitone  <kitone@gna.org>

	* cs.po:
	Update of Czech translation by Pavel Dvořák.

2010-04-06  kitone  <kitone@gna.org>

	* el.po:
	* fr.po:
	* subtitleeditor.pot:
	Update Greek and French translations.

2010-03-30  kitone  <kitone@gna.org>

	* fr.po:
	* subtitleeditor.pot:
	Update French translation.

2010-03-28  kitone  <kitone@gna.org>

	* LINGUAS:
	* el.po:
	Add Greek translation by Manolis Stefanis.

2010-02-02  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with the new plugins (typewriter and sortsubtitles).

2010-01-13  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with delete files. (subtitletags)

2009-12-30  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update.

2009-12-08  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new and delete files. (gstplayer & gstreamerplayer)

2009-11-01  kitone  <kitone@gna.org>

	* Makefile.in.in:
	Update.

2009-08-19  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with corrected files and types.

2009-08-19  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with renamed files.

2009-08-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with new files.

	* LINGUAS:
	* eo.po:
	Add Esperanto translation.

2009-07-31  kitone  <kitone@gna.org>

	* fr.po:
	Fix typo.

2009-07-14  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update with the last change (findandreplace).

2009-06-23  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2009-06-23  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

	* Makefile.in.in:
	* subtitleeditor.pot:
	Update.

2009-06-14  kitone  <kitone@gna.org>

	* fr.po:
	Fix small typo.

2009-06-01  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update.
