@@ -1,3 +1,9 @@
+2010-05-26  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	* subtitleeditor.pot:
+	Update.
+
 2010-05-12  kitone  <kitone@gna.org>
 
 	* gl.po:
